# swissarmybot

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Dockerfile-cross  LICENSE.txt  README.md  mise.toml  spill.typ
.github/workflows/: docker-publish.yml
migrations/: 1_create_tables.sql  2_create_drunk.sql  3_drunk_totals.sql  4_water_column.sql
scripts/: bigmoji.jq  build-cross.sh  build.sh  make-db.sh  map-ids.rb  qotd.sh  quotes.jq  stonks.sh
src/: helpers.rs  jobs.rs  main.rs  models.rs  quotes.rs
src/commands/: bigmoji.rs  definition.rs  drunk.rs  drunks.rs  events.rs  handler.rs  mod.rs  quotes.rs  spill.rs  uiua.rs
src/shared/: bigmoji.rs  drunks.rs  helpers.rs  mod.rs  quotes.rs
src/web/: graphql.rs  handlers.rs  mod.rs  templates.rs
templates/: base.html  bigmoji.html  bigmoji.txt  drunks.html  index.html  quotes.html  quotes.txt
