[package]
name = "swiss_army_bot"
version = "2.3.1-nein"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
future_incompatible = "forbid"

[lints.clippy]
indexing_slicing = "forbid"
unwrap_used = "deny"
expect_used = "deny"
invalid_regex = "deny"
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "*"
axum = "^0.7"
chrono = "*"
chrono-tz = "*"
clokwerk = "^0.4"
dotenvy = "0.15"
include_data_uri = "^0.1" # Had to make this one myself
maud = { version = "^0.26", features = ["axum"] }
poise = "^0.6"
regex = "*"
scraper = "^0.20"
serde = "*"
serde_derive = "*"
tracing = "*"
tracing-subscriber = "*"
uiua = { version = "^0.11", default-features = false }

[dependencies.reqwest]
version = "*"
default-features = false
features = ["rustls-tls", "gzip"]

[dependencies.sqlx]
version = "^0.8"
default-features = false
features = ["macros", "migrate", "chrono", "sqlite", "runtime-tokio"]

[dependencies.tokio]
version = "^1.39"
default-features = false
features = ["rt-multi-thread", "net"]
