[package]
name = "swiss_army_bot"
version = "3.0.0-nein"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
future_incompatible = "forbid"

[lints.clippy]
indexing_slicing = "forbid"
unwrap_used = "deny"
expect_used = "deny"
invalid_regex = "deny"
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "*"
chrono = "*"
chrono-tz = "*"
clokwerk = "^0.4"
dotenvy = "0.15"
poise = "^0.6"
regex = "*"
scraper = "^0.22"
serde = "*"
serde_derive = "*"
serde_json = "*"
tracing = "*"
tracing-subscriber = "*"

[dependencies.reqwest]
version = "*"
default-features = false
features = ["rustls-tls", "gzip"]

[dependencies.sqlx]
version = "^0.8"
default-features = false
features = ["macros", "migrate", "chrono", "postgres", "runtime-tokio", "json"]

[dependencies.tokio]
version = "^1.43"
default-features = false
features = ["rt-multi-thread", "net"]
