[package]
name = "swissarmybot"
version = "3.1.0-nein"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracy = ["tracing-tracy"]

[lints.rust]
unsafe_code = "forbid"
future_incompatible = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
invalid_regex = "deny"
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "*"
chrono = "*"
chrono-tz = "*"
dotenvy = "0.15"
poise = "^0.6"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tracing = "*"
tracing-subscriber = "*"
tracing-tracy = { version = "^0.11", optional = true }

[dependencies.sqlx]
version = "^0.8"
default-features = false
features = ["macros", "migrate", "chrono", "postgres", "runtime-tokio", "json"]

[dependencies.tokio]
version = "^1.44"
default-features = false
features = ["rt-multi-thread", "net"]
